@@ -37,25 +37,30 @@ import org.cloudburstmc.math.vector.Vector3f;
 import org.cloudburstmc.protocol.bedrock.data.entity.EntityDataTypes;
 import org.cloudburstmc.protocol.bedrock.data.entity.EntityEventType;
 import org.cloudburstmc.protocol.bedrock.data.entity.EntityFlag;
-import org.cloudburstmc.protocol.bedrock.data.entity.EntityProperty;
 import org.cloudburstmc.protocol.bedrock.packet.AddEntityPacket;
 import org.cloudburstmc.protocol.bedrock.packet.EntityEventPacket;
 import org.cloudburstmc.protocol.bedrock.packet.MoveEntityAbsolutePacket;
 import org.cloudburstmc.protocol.bedrock.packet.MoveEntityDeltaPacket;
 import org.cloudburstmc.protocol.bedrock.packet.RemoveEntityPacket;
 import org.cloudburstmc.protocol.bedrock.packet.SetEntityDataPacket;
+import org.geysermc.geyser.api.entity.data.GeyserEntityDataType;
+import org.geysermc.geyser.api.entity.definition.GeyserEntityDefinition;
 import org.geysermc.geyser.api.entity.property.BatchPropertyUpdater;
 import org.geysermc.geyser.api.entity.property.GeyserEntityProperty;
 import org.geysermc.geyser.api.entity.type.GeyserEntity;
-import org.geysermc.geyser.entity.EntityDefinition;
-import org.geysermc.geyser.entity.GeyserDirtyMetadata;
+import org.geysermc.geyser.entity.BedrockEntityDefinition;
+import org.geysermc.geyser.entity.EntityTypeDefinition;
+import org.geysermc.geyser.entity.EntitySpectateHelper;
+import org.geysermc.geyser.entity.GeyserEntityDataManager;
 import org.geysermc.geyser.entity.properties.GeyserEntityProperties;
 import org.geysermc.geyser.entity.properties.GeyserEntityPropertyManager;
 import org.geysermc.geyser.entity.properties.type.PropertyType;
 import org.geysermc.geyser.entity.spawn.EntitySpawnContext;
 import org.geysermc.geyser.entity.type.living.MobEntity;
 import org.geysermc.geyser.entity.type.player.PlayerEntity;
+import org.geysermc.geyser.entity.type.player.SessionPlayerEntity;
 import org.geysermc.geyser.entity.vehicle.ClientVehicle;
+import org.geysermc.geyser.entity.EntityDataBehaviorRegistry;
 import org.geysermc.geyser.item.Items;
 import org.geysermc.geyser.item.type.Item;
 import org.geysermc.geyser.level.physics.BoundingBox;
@@ -88,9 +93,11 @@ public class Entity implements GeyserEntity {
     private static final boolean PRINT_ENTITY_SPAWN_DEBUG = Boolean.parseBoolean(System.getProperty("Geyser.PrintEntitySpawnDebug", "false"));
 
     protected final GeyserSession session;
+    @Accessors(fluent = true)
+    protected BedrockEntityDefinition bedrockDefinition;
+    protected EntityTypeDefinition<?> javaDefinition;
 
     protected int entityId;
-
     @Accessors(fluent = true)
     protected final long geyserId;
     @Accessors(fluent = true)
@@ -101,9 +108,17 @@ public class Entity implements GeyserEntity {
      */
     @Setter(AccessLevel.NONE)
     protected String nametag = "";
+    protected boolean customNameVisible;
 
     protected Vector3f position;
     protected Vector3f motion;
+    private float offset;
+    /**
+     * The vertical offset set via the entity data API, or {@code null} if no override is active.
+     * Written on the event loop, but readable from any thread through the entity data API.
+     */
+    @Setter(AccessLevel.NONE)
+    private volatile @Nullable Float offsetOverride;
 
     /**
      * x = Yaw, y = Pitch, z = HeadYaw
@@ -118,8 +133,6 @@ public class Entity implements GeyserEntity {
      */
     protected boolean onGround;
 
-    protected EntityDefinition<?> definition;
-
     /**
      * Indicates if the entity has been initialized and spawned
      */
@@ -131,17 +144,25 @@ public class Entity implements GeyserEntity {
     @Setter(AccessLevel.NONE)
     private float boundingBoxWidth;
     @Setter(AccessLevel.NONE)
-    protected String displayName;
+    @Getter(AccessLevel.NONE)
+    protected @Nullable String customName = null;
     @Setter(AccessLevel.NONE)
     protected boolean silent = false;
     /* Metadata end */
 
     protected List<Entity> passengers = Collections.emptyList();
     protected Entity vehicle;
+
     /**
-     * A container to store temporary metadata before it's sent to Bedrock.
+     * The metadata handler for this entity, including:
+     * <ul>
+     * <li>A container to store temporary metadata before it's sent to Bedrock</li>
+     * <li>Storing API entity data overrides</li>
+     * <li>Storing "real" values for tracked metadata</li>
+     * </ul>
      */
-    protected final GeyserDirtyMetadata dirtyMetadata = new GeyserDirtyMetadata();
+    protected final GeyserEntityDataManager metadata = new GeyserEntityDataManager();
+
     /**
      * The entity flags for the Bedrock entity.
      * These must always be saved - if flags are updated and the other values aren't present, the Bedrock client will
@@ -156,12 +177,13 @@ public class Entity implements GeyserEntity {
     @Setter(AccessLevel.PROTECTED) // For players
     private boolean flagsDirty = false;
 
-    protected final GeyserEntityPropertyManager propertyManager;
+    protected float scale = 1.0F;
+    protected final @Nullable GeyserEntityPropertyManager propertyManager;
 
     public Entity(EntitySpawnContext context) {
         this.session = context.session();
-        this.definition = context.entityTypeDefinition();
-        this.displayName = standardDisplayName();
+        this.javaDefinition = context.entityTypeDefinition();
+        this.bedrockDefinition = context.bedrockEntityDefinition();
 
         this.entityId = context.javaId();
         this.geyserId = context.geyserId();
@@ -171,8 +193,9 @@ public class Entity implements GeyserEntity {
         this.pitch = context.pitch();
         this.headYaw = context.headYaw();
         this.valid = false;
-        this.propertyManager = definition.registeredProperties().isEmpty() ? null : new GeyserEntityPropertyManager(definition.registeredProperties());
+        this.propertyManager = bedrockDefinition.registeredProperties().isEmpty() ? null : new GeyserEntityPropertyManager(bedrockDefinition.registeredProperties());
 
+        setOffset(javaDefinition.offset());
         setPosition(context.position());
         setAirSupply(getMaxAir());
 
@@ -183,10 +206,12 @@ public class Entity implements GeyserEntity {
      * Called on entity spawn. Used to populate the entity metadata and flags with default values.
      */
     protected void initializeMetadata() {
-        dirtyMetadata.put(EntityDataTypes.SCALE, 1f);
-        dirtyMetadata.put(EntityDataTypes.COLOR, (byte) 0);
-        dirtyMetadata.put(EntityDataTypes.AIR_SUPPLY_MAX, getMaxAir());
+        metadata.put(EntityDataTypes.SCALE, scale);
+        metadata.put(EntityDataTypes.COLOR, (byte) 0);
+        metadata.put(EntityDataTypes.AIR_SUPPLY_MAX, getMaxAir());
         setDimensionsFromPose(Pose.STANDING);
+        metadata.put(EntityDataTypes.WIDTH, boundingBoxWidth);
+        metadata.put(EntityDataTypes.HEIGHT, boundingBoxHeight);
         setFlag(EntityFlag.HAS_GRAVITY, true);
         setFlag(EntityFlag.HAS_COLLISION, true);
         setFlag(EntityFlag.CAN_SHOW_NAME, true);
@@ -202,16 +227,16 @@ public class Entity implements GeyserEntity {
 
     public void spawnEntity() {
         AddEntityPacket addEntityPacket = new AddEntityPacket();
-        addEntityPacket.setIdentifier(definition.identifier());
+        addEntityPacket.setIdentifier(bedrockDefinition.identifier().toString());
         addEntityPacket.setRuntimeEntityId(geyserId);
         addEntityPacket.setUniqueEntityId(geyserId);
-        addEntityPacket.setPosition(position);
+        addEntityPacket.setPosition(bedrockPosition());
         addEntityPacket.setMotion(motion);
         addEntityPacket.setRotation(Vector2f.from(pitch, yaw));
         addEntityPacket.setHeadRotation(headYaw);
         addEntityPacket.setBodyRotation(yaw); // TODO: This should be bodyYaw
         addEntityPacket.getMetadata().putFlags(flags);
-        dirtyMetadata.apply(addEntityPacket.getMetadata());
+        metadata.apply(addEntityPacket.getMetadata());
         if (propertyManager != null) {
             propertyManager.applyIntProperties(addEntityPacket.getProperties().getIntProperties());
             propertyManager.applyFloatProperties(addEntityPacket.getProperties().getFloatProperties());
@@ -225,9 +250,7 @@ public class Entity implements GeyserEntity {
         flagsDirty = false;
 
         if (session.getGeyser().config().debugMode() && PRINT_ENTITY_SPAWN_DEBUG) {
-            EntityType type = definition.entityType();
-            String name = type != null ? type.name() : getClass().getSimpleName();
-            session.getGeyser().getLogger().debug("Spawned entity " + name + " at location " + position + " with id " + geyserId + " (java id " + entityId + ")");
+            session.getGeyser().getLogger().debug("Spawned entity " + javaDefinition.type() + " at location " + position + " with id " + geyserId + " (java id " + entityId + ")");
         }
     }
 
@@ -248,6 +271,10 @@ public class Entity implements GeyserEntity {
             passenger.setVehicle(null);
             passenger.setFlag(EntityFlag.RIDING, false);
             passenger.updateBedrockMetadata();
+
+            if (passenger instanceof SessionPlayerEntity entity) {
+                entity.setRemovedPlayerVehicleId(this.entityId);
+            }
         }
 
         RemoveEntityPacket removeEntityPacket = new RemoveEntityPacket();
@@ -263,48 +290,63 @@ public class Entity implements GeyserEntity {
 
     public void moveRelativeRaw(double relX, double relY, double relZ, float yaw, float pitch, float headYaw, boolean isOnGround) {
         if (this instanceof ClientVehicle clientVehicle) {
-            if (clientVehicle.isClientControlled()) {
+            if (clientVehicle.shouldSimulateMovement()) {
                 return;
             }
             clientVehicle.getVehicleComponent().moveRelative(relX, relY, relZ);
         }
 
-        position = Vector3f.from(position.getX() + relX, position.getY() + relY, position.getZ() + relZ);
+        setPosition(position.add(relX, relY, relZ));
+        setOnGround(isOnGround);
 
-        MoveEntityDeltaPacket moveEntityPacket = new MoveEntityDeltaPacket();
-        moveEntityPacket.setRuntimeEntityId(geyserId);
-        if (relX != 0.0) {
-            moveEntityPacket.setX(position.getX());
-            moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_X);
-        }
-        if (relY != 0.0) {
-            moveEntityPacket.setY(position.getY());
-            moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_Y);
-        }
-        if (relZ != 0.0) {
-            moveEntityPacket.setZ(position.getZ());
-            moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_Z);
-        }
+        boolean dirtyPitch = false, dirtyYaw = false, dirtyHeadYaw = false;
         if (pitch != this.pitch) {
             this.pitch = pitch;
-            moveEntityPacket.setPitch(pitch);
-            moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_PITCH);
+            dirtyPitch = true;
         }
+
         if (yaw != this.yaw) {
             this.yaw = yaw;
-            moveEntityPacket.setYaw(yaw);
-            moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_YAW);
+            dirtyYaw = true;
         }
+
         if (headYaw != this.headYaw) {
             this.headYaw = headYaw;
-            moveEntityPacket.setHeadYaw(headYaw);
-            moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_HEAD_YAW);
+            dirtyHeadYaw = true;
         }
-        setOnGround(isOnGround);
-        if (isOnGround) {
-            moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.ON_GROUND);
+
+        if (isValid()) {
+            MoveEntityDeltaPacket moveEntityPacket = new MoveEntityDeltaPacket();
+            moveEntityPacket.setRuntimeEntityId(geyserId);
+            if (relX != 0.0) {
+                moveEntityPacket.setX(bedrockPosition().getX());
+                moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_X);
+            }
+            if (relY != 0.0) {
+                moveEntityPacket.setY(bedrockPosition().getY());
+                moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_Y);
+            }
+            if (relZ != 0.0) {
+                moveEntityPacket.setZ(bedrockPosition().getZ());
+                moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_Z);
+            }
+            if (dirtyPitch) {
+                moveEntityPacket.setPitch(pitch);
+                moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_PITCH);
+            }
+            if (dirtyYaw) {
+                moveEntityPacket.setYaw(yaw);
+                moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_YAW);
+            }
+            if (dirtyHeadYaw) {
+                moveEntityPacket.setHeadYaw(headYaw);
+                moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_HEAD_YAW);
+            }
+            if (isOnGround) {
+                moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.ON_GROUND);
+            }
+            session.sendUpstreamPacket(moveEntityPacket);
         }
-        session.sendUpstreamPacket(moveEntityPacket);
     }
 
     public void moveAbsolute(Vector3f position, float yaw, float pitch, boolean isOnGround, boolean teleported) {
@@ -317,20 +359,22 @@ public class Entity implements GeyserEntity {
 
     public void moveAbsoluteRaw(Vector3f position, float yaw, float pitch, float headYaw, boolean isOnGround, boolean teleported) {
         setPosition(position);
-        // Setters are intentional so it can be overridden in places like AbstractArrowEntity
+        // Setters are intentional, so it can be overridden in places like AbstractArrowEntity
         setYaw(yaw);
         setPitch(pitch);
         setHeadYaw(headYaw);
         setOnGround(isOnGround);
 
-        MoveEntityAbsolutePacket moveEntityPacket = new MoveEntityAbsolutePacket();
-        moveEntityPacket.setRuntimeEntityId(geyserId);
-        moveEntityPacket.setPosition(position);
-        moveEntityPacket.setRotation(getBedrockRotation());
-        moveEntityPacket.setOnGround(isOnGround);
-        moveEntityPacket.setTeleported(teleported);
+        if (isValid()) {
+            MoveEntityAbsolutePacket moveEntityPacket = new MoveEntityAbsolutePacket();
+            moveEntityPacket.setRuntimeEntityId(geyserId);
+            moveEntityPacket.setPosition(bedrockPosition());
+            moveEntityPacket.setRotation(bedrockRotation());
+            moveEntityPacket.setOnGround(isOnGround);
+            moveEntityPacket.setTeleported(teleported);
 
-        session.sendUpstreamPacket(moveEntityPacket);
+            session.sendUpstreamPacket(moveEntityPacket);
+        }
     }
 
     /**
@@ -400,20 +444,42 @@ public class Entity implements GeyserEntity {
             return;
         }
 
-        if (dirtyMetadata.hasEntries() || flagsDirty) {
+        if (metadata.hasEntries() || flagsDirty || (propertyManager != null && propertyManager.hasProperties())) {
             SetEntityDataPacket entityDataPacket = new SetEntityDataPacket();
             entityDataPacket.setRuntimeEntityId(geyserId);
             if (flagsDirty) {
-                entityDataPacket.getMetadata().putFlags(flags);
+                // Re-assert the first-person hide; a server flags-byte refresh would otherwise un-hide the target
+                if (session.getSpectatedEntity() == this && session.getSpectateMode() == EntitySpectateHelper.SpectateMode.FIRST_PERSON) {
+                    entityDataPacket.getMetadata().putFlags(spectateHiddenFlags());
+                } else {
+                    entityDataPacket.getMetadata().putFlags(flags);
+                }
                 flagsDirty = false;
             }
-            dirtyMetadata.apply(entityDataPacket.getMetadata());
+            metadata.apply(entityDataPacket.getMetadata());
             if (propertyManager != null && propertyManager.hasProperties()) {
                 propertyManager.applyIntProperties(entityDataPacket.getProperties().getIntProperties());
                 propertyManager.applyFloatProperties(entityDataPacket.getProperties().getFloatProperties());
             }
             session.sendUpstreamPacket(entityDataPacket);
         }
+    }
+
+    /** Per-viewer invisibility toggle that doesn't mutate the cached flags (entity spectating). */
+    public void sendSpectateInvisible(boolean hidden) {
+        if (!valid) {
+            return;
+        }
+        SetEntityDataPacket packet = new SetEntityDataPacket();
+        packet.setRuntimeEntityId(geyserId);
+        packet.getMetadata().putFlags(hidden ? spectateHiddenFlags() : flags);
+        session.sendUpstreamPacket(packet);
+    }
+
+    protected EnumMap<EntityFlag, Boolean> spectateHiddenFlags() {
+        EnumMap<EntityFlag, Boolean> overridden = new EnumMap<>(flags);
+        overridden.put(EntityFlag.INVISIBLE, true);
+        return overridden;
     }
 
     /**
@@ -475,7 +541,7 @@ public class Entity implements GeyserEntity {
     }
 
     protected void setAirSupply(int amount) {
-        dirtyMetadata.put(EntityDataTypes.AIR_SUPPLY, (short) MathUtils.constrain(amount, 0, getMaxAir()));
+        metadata.put(EntityDataTypes.AIR_SUPPLY, (short) MathUtils.constrain(amount, 0, getMaxAir()));
     }
 
     protected short getMaxAir() {
@@ -489,31 +555,27 @@ public class Entity implements GeyserEntity {
         return uuid != null ? uuid.toString() : null;
     }
 
-    public void setDisplayName(EntityMetadata<Optional<Component>, ?> entityMetadata) {
-        // displayName is shown when always display name is enabled. Either with or without team.
-        // That's why there are both a displayName and a nametag variable.
-        // Displayname is ignored for players, and is always their username.
+    public void setCustomName(EntityMetadata<Optional<Component>, ?> entityMetadata) {
+        // customName is shown when always custom name is enabled. Either with or without team.
+        // That's why there are both a customName and a nametag variable.
+        // CustomName is ignored for players, and is always their username.
         Optional<Component> name = entityMetadata.getValue();
         if (name.isPresent()) {
-            String displayName = MessageTranslator.convertMessage(name.get(), session.locale());
-            this.displayName = displayName;
-            setNametag(displayName, true);
+            this.customName = MessageTranslator.convertMessage(name.get(), session.locale());
+            setNametag(customName, true);
             return;
         }
-
-        // if no displayName is set, use entity name (ENDER_DRAGON -> Ender Dragon)
-        // maybe we can/should use a translatable here instead?
-        this.displayName = standardDisplayName();
-        setNametag(null, true);
+        this.customName = null;
+        setNametag(getDisplayName(customNameVisible), true);
     }
 
     protected String standardDisplayName() {
-        return EntityUtils.translatedEntityName(definition.entityType(), session);
+        return EntityUtils.translatedEntityName(javaDefinition.type(), session);
     }
 
-    protected void setNametag(@Nullable String nametag, boolean fromDisplayName) {
+    protected void setNametag(@Nullable String nametag, boolean applyTeamStyling) {
         // ensure that the team format is used when nametag changes
-        if (nametag != null && fromDisplayName) {
+        if (nametag != null && applyTeamStyling) {
             var team = session.getWorldCache().getScoreboard().getTeamFor(teamIdentifier());
             if (team != null) {
                 updateNametag(team);
@@ -531,9 +593,14 @@ public class Entity implements GeyserEntity {
             return;
         }
 
-        dirtyMetadata.put(EntityDataTypes.NAME, nametag);
+        setNameEntityData(nametag);
         // if nametag (player with team) is hidden for player, so should the score (belowname)
         scoreVisibility(!nametag.isEmpty());
+    }
+
+    // See TextDisplayEntity for context
+    protected void setNameEntityData(String nametag) {
+        metadata.put(EntityDataTypes.NAME, nametag);
     }
 
     public void updateNametag(@Nullable Team team) {
@@ -542,26 +609,47 @@ public class Entity implements GeyserEntity {
     }
 
     protected void updateNametag(@Nullable Team team, boolean visible) {
-        if (team != null) {
-            String newNametag;
+        if (!visible) {
+            // The name is not visible to the session player; clear name
+            setNametag("", false);
+            return;
+        } else if (team != null) {
             // (team) visibility is LivingEntity+, team displayName is Entity+
-            if (visible) {
-                newNametag = team.displayName(getDisplayName());
-            } else {
-                // The name is not visible to the session player; clear name
-                newNametag = "";
-            }
-            setNametag(newNametag, false);
+            setNametag(team.displayName(getDisplayName(true)), false);
             return;
         }
-        // The name has reset, if it was previously something else
-        setNametag(null, false);
+
+        // The name might need to be reset: no more team!
+        setNametag(getDisplayName(customNameVisible), false);
     }
 
     protected void scoreVisibility(boolean show) {}
 
-    public void setDisplayNameVisible(BooleanEntityMetadata entityMetadata) {
-        dirtyMetadata.put(EntityDataTypes.NAMETAG_ALWAYS_SHOW, (byte) (entityMetadata.getPrimitiveValue() ? 1 : 0));
+    /*
+     * Returns the appropriate name to use for nametags:
+     * Either the custom name, or default type name fallback
+     * Mirrors Mojmap Entity#getName
+     */
+    public @Nullable String getDisplayName(boolean includeStandardName) {
+        if (this.customName != null) {
+            return this.customName;
+        }
+        if (includeStandardName) {
+            return standardDisplayName();
+        }
+        return null;
+    }
+
+    public void setCustomNameVisible(BooleanEntityMetadata entityMetadata) {
+        this.customNameVisible = entityMetadata.getPrimitiveValue();
+        // We must show a nametag (either custom name, or entity type fallback).
+        // But we also have to apply team styling if present.
+        setNametag(getDisplayName(customNameVisible), true);
+        setNametagAlwaysShow(customNameVisible);
+    }
+
+    public void setNametagAlwaysShow(boolean value) {
+        metadata.put(EntityDataTypes.NAMETAG_ALWAYS_SHOW, (byte) (value ? 1 : 0));
     }
 
     public final void setSilent(BooleanEntityMetadata entityMetadata) {
@@ -588,14 +676,14 @@ public class Entity implements GeyserEntity {
      */
     protected void setDimensionsFromPose(Pose pose) {
         // No flexibility options for basic entities
-        setBoundingBoxHeight(definition.height());
-        setBoundingBoxWidth(definition.width());
+        setBoundingBoxHeight(javaDefinition.height());
+        setBoundingBoxWidth(javaDefinition.width());
     }
 
     public boolean setBoundingBoxHeight(float height) {
         if (height != boundingBoxHeight) {
             boundingBoxHeight = height;
-            dirtyMetadata.put(EntityDataTypes.HEIGHT, boundingBoxHeight);
+            metadata.put(EntityDataTypes.HEIGHT, boundingBoxHeight);
 
             updatePassengerOffsets();
             return true;
@@ -606,8 +694,17 @@ public class Entity implements GeyserEntity {
     public void setBoundingBoxWidth(float width) {
         if (width != boundingBoxWidth) {
             boundingBoxWidth = width;
-            dirtyMetadata.put(EntityDataTypes.WIDTH, boundingBoxWidth);
+            metadata.put(EntityDataTypes.WIDTH, boundingBoxWidth);
         }
+    }
+
+    public void setScale(float scale) {
+        this.scale = scale;
+        applyScale();
+    }
+
+    protected void applyScale() {
+        metadata.put(EntityDataTypes.SCALE, scale);
     }
 
     /**
@@ -618,12 +715,12 @@ public class Entity implements GeyserEntity {
         // The Java client caps its freezing tick percentage at 140
         int freezingTicks = Math.min(entityMetadata.getPrimitiveValue(), 140);
         float freezingPercentage = freezingTicks / 140f;
-        dirtyMetadata.put(EntityDataTypes.FREEZING_EFFECT_STRENGTH, freezingPercentage);
+        metadata.put(EntityDataTypes.FREEZING_EFFECT_STRENGTH, freezingPercentage);
         return freezingPercentage;
     }
 
     public void setRiderSeatPosition(Vector3f position) {
-        dirtyMetadata.put(EntityDataTypes.SEAT_OFFSET, position);
+        metadata.put(EntityDataTypes.SEAT_OFFSET, position);
     }
 
     /**
@@ -648,8 +745,19 @@ public class Entity implements GeyserEntity {
      *
      * @return the bedrock rotation
      */
-    public Vector3f getBedrockRotation() {
+    public Vector3f bedrockRotation() {
         return Vector3f.from(getPitch(), getYaw(), getHeadYaw());
+    }
+
+    /**
+     * Gets the Bedrock edition position with the offset applied
+     */
+    public Vector3f bedrockPosition() {
+        float offset = getOffset();
+        if (offset == 0f) {
+            return position;
+        }
+        return position.up(offset);
     }
 
     /**
@@ -671,7 +779,7 @@ public class Entity implements GeyserEntity {
      */
     protected void updateMountOffset() {
         if (vehicle != null) {
-            boolean rider = vehicle.getPassengers().get(0) == this;
+            boolean rider = vehicle.getPassengers().getFirst() == this;
             EntityUtils.updateMountOffset(this, vehicle, rider, true, vehicle.getPassengers().indexOf(this), vehicle.getPassengers().size());
             updateBedrockMetadata();
         }
@@ -697,7 +805,7 @@ public class Entity implements GeyserEntity {
                 break;
             }
         }
-        session.getPlayerEntity().getDirtyMetadata().put(EntityDataTypes.INTERACT_TEXT, tag.getValue());
+        session.getPlayerEntity().getMetadata().put(EntityDataTypes.INTERACT_TEXT, tag.getValue());
         session.getPlayerEntity().updateBedrockMetadata();
     }
 
@@ -752,10 +860,10 @@ public class Entity implements GeyserEntity {
 
     public boolean hasLeashesToDrop() {
         BoundingBox searchBB = new BoundingBox(position.getX(), position.getY(), position.getZ(), 32, 32, 32);
-        List<Leashable> leashedInRange = session.getEntityCache().getEntities().values().stream()
+        List<Leashable> leashedInRange = session.getEntityCache().getEntitiesUnsafe().values().stream()
             .filter(entity -> entity instanceof Leashable leashablex && leashablex.leashHolderBedrockId() == this.geyserId())
             .filter(entity -> {
-                BoundingBox leashedBB = new BoundingBox(entity.position.toDouble(), entity.boundingBoxWidth, entity.boundingBoxHeight, entity.boundingBoxWidth);
+                BoundingBox leashedBB = new BoundingBox(entity.position().toDouble(), entity.boundingBoxWidth, entity.boundingBoxHeight, entity.boundingBoxWidth);
                 return searchBB.checkIntersection(leashedBB);
             }).map(Leashable.class::cast).toList();
 
@@ -793,45 +901,99 @@ public class Entity implements GeyserEntity {
     }
 
     @Override
-    public void updatePropertiesBatched(Consumer<BatchPropertyUpdater> consumer, boolean immediate) {
+    public @Nullable GeyserEntity vehicle() {
+        return this.vehicle;
+    }
+
+    @Override
+    public @NonNull List<GeyserEntity> passengers() {
+        return List.copyOf(this.passengers);
+    }
+
+    @Override
+    public void updatePropertiesBatched(@NonNull Consumer<BatchPropertyUpdater> consumer, boolean immediate) {
         if (this.propertyManager == null) {
             throw new IllegalArgumentException("Given entity has no registered properties!");
         }
-
         Objects.requireNonNull(consumer);
-        GeyserEntityProperties propertyDefinitions = definition.registeredProperties();
-        consumer.accept(new BatchPropertyUpdater() {
-            @Override
-            public <T> void update(@NonNull GeyserEntityProperty<T> property, @Nullable T value) {
-                Objects.requireNonNull(property, "property must not be null!");
-                if (!(property instanceof PropertyType)) {
-                    throw new IllegalArgumentException("Invalid property implementation! Got: " + property.getClass().getSimpleName());
-                }
-                PropertyType<T, ? extends EntityProperty> propertyType = (PropertyType<T, ?>) property;
-                int index = propertyDefinitions.getPropertyIndex(property.identifier().toString());
-                if (index < 0) {
-                    throw new IllegalArgumentException("No property with the name " + property.identifier() + " has been registered.");
-                }
 
-                var expectedProperty = propertyDefinitions.getProperties().get(index);
-                if (!expectedProperty.equals(propertyType)) {
-                    throw new IllegalArgumentException("The supplied property was not registered with this entity type!");
-                }
+        session.ensureInEventLoop(() -> {
+            GeyserEntityProperties propertyDefinitions = bedrockDefinition.registeredProperties();
+            consumer.accept(new BatchPropertyUpdater() {
+                @Override
+                public <T> void update(@NonNull GeyserEntityProperty<T> property, @Nullable T value) {
+                    Objects.requireNonNull(property, "property must not be null!");
+                    if (!(property instanceof PropertyType<T, ?> propertyType)) {
+                        throw new IllegalArgumentException("Invalid property implementation! Got: " + property.getClass().getSimpleName());
+                    }
+                    int index = propertyDefinitions.getPropertyIndex(property.identifier().toString());
+                    if (index < 0) {
+                        throw new IllegalArgumentException("No property with the name " + property.identifier() + " has been registered.");
+                    }
 
-                propertyType.apply(propertyManager, value);
+                    var expectedProperty = propertyDefinitions.getProperties().get(index);
+                    if (!expectedProperty.equals(propertyType)) {
+                        throw new IllegalArgumentException("The supplied property was not registered with this entity type!");
+                    }
+
+                    propertyType.apply(propertyManager, value);
+                }
+            });
+
+            if (propertyManager.hasProperties()) {
+                if (immediate) {
+                    SetEntityDataPacket packet = new SetEntityDataPacket();
+                    packet.setRuntimeEntityId(geyserId());
+                    propertyManager.applyFloatProperties(packet.getProperties().getFloatProperties());
+                    propertyManager.applyIntProperties(packet.getProperties().getIntProperties());
+                    session.sendUpstreamPacketImmediately(packet);
+                } else {
+                    session.getEntityCache().markDirty(this);
+                }
             }
         });
+    }
 
-        if (propertyManager.hasProperties()) {
-            SetEntityDataPacket packet = new SetEntityDataPacket();
-            packet.setRuntimeEntityId(geyserId());
-            propertyManager.applyFloatProperties(packet.getProperties().getFloatProperties());
-            propertyManager.applyIntProperties(packet.getProperties().getIntProperties());
-            if (immediate) {
-                session.sendUpstreamPacketImmediately(packet);
-            } else {
-                session.sendUpstreamPacket(packet);
-            }
+    public float getOffset() {
+        return Objects.requireNonNullElse(this.offsetOverride, offset);
+    }
+
+    public void setOffsetOverride(@Nullable Float offset) {
+        this.offsetOverride = offset;
+        if (isValid()) {
+            this.moveRelativeRaw(0, 0, 0, 0, 0, 0, isOnGround());
         }
+    }
+
+    @Override
+    public @NonNull GeyserEntityDefinition definition() {
+        return bedrockDefinition;
+    }
+
+    @Override
+    public @NonNull Vector3f position() {
+        return position;
+    }
+
+    @Override
+    public <T> void override(@NonNull GeyserEntityDataType<T> dataType, @Nullable T value) {
+        session.ensureInEventLoop(() -> {
+            EntityDataBehaviorRegistry.update(this, dataType, value);
+            session.getEntityCache().markDirty(this);
+        });
+    }
+
+    @Override
+    public @Nullable <T> T value(@NonNull GeyserEntityDataType<T> dataType) {
+        return EntityDataBehaviorRegistry.value(this, dataType);
+    }
+
+    @Override
+    public @Nullable <T> T override(@NonNull GeyserEntityDataType<T> dataType) {
+        return EntityDataBehaviorRegistry.override(this, dataType);
+    }
+
+    public EntityType getEntityType() {
+        return javaDefinition.type().mcpl();
     }
 }
