@@ -201,7 +201,7 @@ public final class BundleInventoryTranslator {
 
                 // Can't select bundle slots while holding bundle in any version; don't set desired bundle slot
 
-                if (bundleSlotData.getStackNetworkId() != contents.get(0).getNetId()) {
+                if (bundleSlotData.getStackNetworkId() != contents.getFirst().getNetId()) {
                     // We're pulling out the first item; if something mismatches, wuh oh.
                     return rejectRequest(request);
                 }
